# 25-database-class-analysis-exercise

./: .gitignore  .gitmodules  main.py  mise.toml  pyproject.toml
.github/workflows/: deploy.yml
src/: analysis.py  analysis1.py
