[project]
name = "25-database-class-analysis-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.19.2",
    "matplotlib>=3.10.8",
    "polars>=1.37.1",
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.14.0",
    "ruff>=0.14.11",
    "ty>=0.0.12",
]
